--- a/frontend/src/app/consulta/components/emergencia/emergencia.component.html
+++ b/frontend/src/app/consulta/components/emergencia/emergencia.component.html
@@ -1,189 +1,131 @@
-<div class="p-grid p-fluid">
+<div class="card">
+    <h1>Marcar Consultas - Emergência</h1>
     <form [formGroup]="formEmergencia" (ngSubmit)="cadastrarConsultas()">
-        <div class="p-col-12 p-grid">
-            <h1>Marcar Consultas - Emergência</h1>
-
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input type="text" pInputText formControlName="numeroConsulta" />
-                    <label>Nº da Consulta</label>
-                </span>
-            </div>
-
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <p-calendar
-                        [locale]="localizacao"
-                        [yearRange]="anosDisponiveis"
-                        [dateFormat]="formatoDeData"
-                        monthNavigator="true"
-                        yearNavigator="true"
-                        formControlName="dataHoraDaConsulta"
-                        showTime="true"
-                    ></p-calendar>
-                    <label>Data da Consulta</label>
-                </span>
-            </div>
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input type="text" pInputText formControlName="grade" />
-                    <label>Grade</label>
-                </span>
-            </div>
-            <div class="p-md-4 p-sm-12">
-                <p-button
-                    label="Acessar Calendário"
-                    icon="pi pi-calendar"
-                    type="button"
-                    [routerLink]="['/consulta/consulta-calendario']"
-                ></p-button>
-            </div>
-
-            <div class="p-col-12 p-grid"></div>
-            <div class="p-md-2 p-sm-12">
-                <span class="md-inputfield p-float-label">
-                    <input pInputText disabled="true" formControlName="prontuario" />
-                    <label>Prontuário</label>
-                </span>
-            </div>
-
-            <div class="p-md-5 p-sm-12">
-                <span class="p-float-label">
-                    <p-autoComplete
-                        field="nome"
-                        [suggestions]="pacientes"
-                        pInputText
-                        formControlName="nome"
-                        (completeMethod)="listarPacientes()"
-                        (onSelect)="aoSelecionarPaciente($event)"
-                        [dropdown]="true"
-                    ></p-autoComplete>
-                    <label>Nome</label>
-                </span>
-            </div>
-            <div class="p-col-12 p-grid"></div>
+        <div class="p-grid p-fluid">
             <div class="p-col-12 p-grid">
-                <span class="p-md-2 p-float-label">
-                    <input type="text" pInputText formControlName="numeroDeSala" />
-                    <label>Nº de sala</label>
-                </span>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText formControlName="numeroConsulta" />
+                        <label>Nº da Consulta</label>
+                    </span>
+                </div>
 
-                <span class="p-md-3 md-inputfield">
-                    <p-dropdown
-                        pInputText
-                        [filter]="true"
-                        [options]="opcaoTurno"
-                        formControlName="turno"
-                        placeholder="Selecione"
-                    ></p-dropdown>
-                    <label>Turno</label>
-                </span>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <p-calendar [locale]="localizacao" [yearRange]="anosDisponiveis" [dateFormat]="formatoDeData"
+                            monthNavigator="true" yearNavigator="true" formControlName="dataHoraDaConsulta"
+                            showTime="true"></p-calendar>
+                        <label>Data da Consulta</label>
+                    </span>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText formControlName="grade" />
+                        <label>Grade</label>
+                    </span>
+                </div>
+                <div class="p-md-4 p-sm-12">
+                    <p-button label="Acessar Calendário" icon="pi pi-calendar" type="button"
+                        [routerLink]="['/consulta/consulta-calendario']"></p-button>
+                </div>
 
-                <span class="p-md-4 md-inputfield">
-                    <p-dropdown
-                        pInputText
-                        [filter]="true"
-                        [options]="opcaoTipoPagador"
-                        formControlName="tipoPagador"
-                        placeholder="Selecione"
-                    ></p-dropdown>
-                    <label>Tipo Pagador</label>
-                </span>
-            </div>
-            <div class="p-col-12 p-grid"></div>
+                <div class="p-col-12 p-grid"></div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="md-inputfield p-float-label">
+                        <input pInputText disabled="true" formControlName="prontuario" />
+                        <label>Prontuário</label>
+                    </span>
+                </div>
 
-            <div class="p-md-3 p-sm-12">
-                <span class="md-inputfield p-float-label">
-                    <p-dropdown
-                        optionLabel="especialidade"
-                        [options]="especialidades"
-                        pInputText
-                        formControlName="especialidade"
-                        [filter]="true"
-                        placeholder="Selecione"
-                    >
-                    </p-dropdown>
-                    <label>Especialidade</label>
-                </span>
-            </div>
-            <div class="p-md-3 p-sm-12">
-                <span class="md-inputfield p-float-label">
-                    <p-dropdown
-                        optionLabel="nome"
-                        [options]="crm"
-                        pInputText
-                        formControlName="profissional"
-                        [filter]="true"
-                        placeholder="Selecione"
-                    ></p-dropdown>
-                    <label>Profissional</label>
-                </span>
-            </div>
+                <div class="p-md-5 p-sm-12">
+                    <span class="p-float-label">
+                        <p-autoComplete field="nome" [suggestions]="pacientes" formControlName="nome"
+                            (completeMethod)="listarPacientes()" (onSelect)="aoSelecionarPaciente($event)"
+                            [dropdown]="true"></p-autoComplete>
+                        <label>Nome</label>
+                    </span>
+                </div>
+                <div class="p-col-12 p-grid"></div>
+                <div class="p-col-12 p-grid">
+                    <span class="p-md-2 p-float-label">
+                        <input type="text" pInputText formControlName="numeroDeSala" />
+                        <label>Nº de sala</label>
+                    </span>
 
-            <div class="p-col-12 p-grid"></div>
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input type="text" pInputText formControlName="convenio" />
-                    <label>Convênio</label>
-                </span>
-            </div>
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input type="text" pInputText formControlName="clinicaCentralId" />
-                    <label>Cód. Central</label>
-                </span>
-            </div>
+                    <span class="p-md-3 p-float-label">
+                        <p-dropdown [filter]="true" [options]="opcaoTurno" formControlName="turno"></p-dropdown>
+                        <label>Turno</label>
+                    </span>
 
-            <div class="p-col-12 p-grid"></div>
-            <div class="p-md-4 p-sm-12">
-                <span class="p-float-label">
-                    <input
-                        type="text"
-                        pInputText
-                        pTooltip="Escreva uma observação para consulta."
-                        formControlName="observacao"
-                    />
-                    <label>Observação</label>
-                </span>
-            </div>
-            <div class="p-md-4 p-sm-12">
-                <span class="p-float-label">
-                    <input
-                        type="text"
-                        pInputText
-                        pTooltip="Escreva um justificativa para consulta."
-                        formControlName="justificativa"
-                    />
-                    <label>Justificativa</label>
-                </span>
-            </div>
+                    <span class="p-md-4 p-float-label">
+                        <p-dropdown [filter]="true" [options]="opcaoTipoPagador" formControlName="tipoPagador">
+                        </p-dropdown>
+                        <label>Tipo Pagador</label>
+                    </span>
+                </div>
+                <div class="p-col-12 p-grid"></div>
 
-            <div class="p-col-12 p-grid">
-                <p-radioButton
-                    formControlName="gradesDiponiveis"
-                    label="Grades Diponíveis "
-                    pRadioButton
-                ></p-radioButton>
-            </div>
+                <div class="p-md-3 p-sm-12">
+                    <span class="md-inputfield p-float-label">
+                        <p-dropdown optionLabel="especialidade" [options]="especialidades"
+                            formControlName="especialidade" [filter]="true">
+                        </p-dropdown>
+                        <label>Especialidade</label>
+                    </span>
+                </div>
+                <div class="p-md-3 p-sm-12">
+                    <span class="md-inputfield p-float-label">
+                        <p-dropdown optionLabel="nome" [options]="crm" formControlName="profissional" [filter]="true">
+                        </p-dropdown>
+                        <label>Profissional</label>
+                    </span>
+                </div>
 
-            <div class="p-col-12  p-grid">
-                <div class="p-float-label">
+                <div class="p-col-12 p-grid"></div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText formControlName="convenio" />
+                        <label>Convênio</label>
+                    </span>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText formControlName="clinicaCentralId" />
+                        <label>Cód. Central</label>
+                    </span>
+                </div>
+
+                <div class="p-col-12 p-grid"></div>
+                <div class="p-md-4 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText pTooltip="Escreva uma observação para consulta."
+                            formControlName="observacao" />
+                        <label>Observação</label>
+                    </span>
+                </div>
+                <div class="p-md-4 p-sm-12">
+                    <span class="p-float-label">
+                        <input type="text" pInputText pTooltip="Escreva um justificativa para consulta."
+                            formControlName="justificativa" />
+                        <label>Justificativa</label>
+                    </span>
+                </div>
+
+                <div class="p-col-12 p-grid">
+                    <div class="p-md-12">
+                        <p-radioButton formControlName="gradesDiponiveis" label="Grades Diponíveis " pRadioButton>
+                        </p-radioButton>
+                    </div>
+                </div>
+
+                <div class="p-col-12 p-grid">
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Cancelar"
-                            pTooltip="Cancelar marcação de consulta."
-                            [routerLink]="['/listar-consultas']"
-                        ></button>
+                        <button pButton type="button" label="Cancelar" pTooltip="Cancelar marcação de consulta."
+                            [routerLink]="['/listar-consultas']"></button>
                     </div>
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="submit"
-                            label="Salvar"
-                            pTooltip="Salvar marcação de consulta."
-                        ></button>
+                        <button pButton type="submit" label="Salvar"
+                            pTooltip="Salvar marcação de consulta."></button>
                     </div>
                 </div>
             </div>
