--- a/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
+++ b/frontend/src/app/internacao/cadastro-clinicas/clinica/clinica.component.html
@@ -1,6 +1,6 @@
-<div class="p-grid p-fluid">
-    <div class="p-col-12 p-grid">
-        <form (ngSubmit)="cadastrar()">
+<form (ngSubmit)="cadastrar()">
+    <div class="p-grid p-fluid">
+        <div class="p-col-12 p-grid">
             <p-accordion>
                 <p-accordionTab header="Cadastrar Clínicas" [selected]="true">
                     <form [formGroup]="clinica">
@@ -8,36 +8,24 @@
                             <div class="p-col-12 p-grid">
                                 <div class="p-md-4 p-sm-12">
                                     <span class="p-float-label">
-                                        <input
-                                            type="text"
-                                            pInputText
-                                            pTooltip="Digite a capacidade referencial."
-                                            formControlName="capacidadeReferencial"
-                                        />
+                                        <input type="text" pInputText pTooltip="Digite a capacidade referencial."
+                                            formControlName="capacidadeReferencial" />
                                         <label>Capacidade Referencial</label>
                                     </span>
                                 </div>
                                 <div class="p-md-8 p-sm-12">
                                     <span class="p-float-label">
-                                        <p-inputMask
-                                            pInputText
-                                            formControlName="numeroSUS"
-                                            mask="999999999999999"
+                                        <p-inputMask pInputText formControlName="numeroSUS" mask="999999999999999"
                                             placeholder="___ ____ ____ ____"
-                                            pTooltip="Informe o número do SUS da clínica."
-                                        ></p-inputMask>
+                                            pTooltip="Informe o número do SUS da clínica."></p-inputMask>
                                         <label>Número do SUS</label>
                                     </span>
                                 </div>
                             </div>
                             <div class="p-col-12 p-grid">
-                                <div class="p-col-12 p-grid sm-12">
+                                <div class="p-md-12 sm-12">
                                     <span class="p-float-label">
-                                        <textarea
-                                            pInputTextarea
-                                            rows="3"
-                                            formControlName="descricao"
-                                        >
+                                        <textarea pInputTextarea rows="3" formControlName="descricao">
                                         </textarea>
                                         <label>Descrição</label>
                                     </span>
@@ -52,23 +40,15 @@
                             <div class="p-col-12 p-grid">
                                 <div class="p-md-3 p-sm-12">
                                     <span class="p-float-label">
-                                        <input
-                                            type="text"
-                                            pInputText
-                                            pTooltip="Digite a idade mínima para internação."
-                                            formControlName="idadeMinimaInternacao"
-                                        />
+                                        <input type="text" pInputText pTooltip="Digite a idade mínima para internação."
+                                            formControlName="idadeMinimaInternacao" />
                                         <label>Idade Mínima</label>
                                     </span>
                                 </div>
                                 <div class="p-md-3 p-sm-12">
                                     <span class="p-float-label">
-                                        <input
-                                            type="text"
-                                            pInputText
-                                            pTooltip="Digite a idade máxima para internação."
-                                            formControlName="idadeMaximaInternacao"
-                                        />
+                                        <input type="text" pInputText pTooltip="Digite a idade máxima para internação."
+                                            formControlName="idadeMaximaInternacao" />
                                         <label>Idade Máxima</label>
                                     </span>
                                 </div>
@@ -82,23 +62,15 @@
                             <div class="p-col-12 p-grid">
                                 <div class="p-md-3 p-sm-12">
                                     <span class="p-float-label">
-                                        <input
-                                            type="text"
-                                            pInputText
-                                            pTooltip="Digite a idade mínima para ambulatório."
-                                            formControlName="idadeMinimaAmbulatorio"
-                                        />
+                                        <input type="text" pInputText pTooltip="Digite a idade mínima para ambulatório."
+                                            formControlName="idadeMinimaAmbulatorio" />
                                         <label>Idade Mínima</label>
                                     </span>
                                 </div>
                                 <div class="p-md-3 p-sm-12">
                                     <span class="p-float-label">
-                                        <input
-                                            type="text"
-                                            pInputText
-                                            pTooltip="Digite a idade máxima para ambulatório."
-                                            formControlName="idadeMaximaAmbulatorio"
-                                        />
+                                        <input type="text" pInputText pTooltip="Digite a idade máxima para ambulatório."
+                                            formControlName="idadeMaximaAmbulatorio" />
                                         <label>Idade Máxima</label>
                                     </span>
                                 </div>
@@ -108,6 +80,6 @@
                 </p-accordionTab>
             </p-accordion>
             <button pButton type="submit" [disabled]="!valid()" label="Cadastrar"></button>
-        </form>
+        </div>
     </div>
-</div>
+</form>
