--- a/frontend/src/app/internacao/components/pacientes-lista/pacientes-lista.component.html
+++ b/frontend/src/app/internacao/components/pacientes-lista/pacientes-lista.component.html
@@ -14,14 +14,13 @@
                         <label>Nome paciente</label>
                     </span>
                 </div>
-                <div class="p-col-12 p-grid">
-                    <div class="p-md-1"></div>
+                <div class="p-col-12 p-grid p-d-flex p-jc-center">
                     <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Pesquisar"
-                            icon="p-icon-search"
+                            icon="pi pi-search"
                             [disabled]="!filtroNomeDoPaciente"
                             (click)="datatable.refresh(filtroNomeDoPaciente)"
                             bTooltip="Pesquisar paciente por nome."
@@ -32,7 +31,7 @@
                             pButton
                             type="button"
                             label="Limpar"
-                            icon="p-icon-minus"
+                            icon="pi pi-minus"
                             [disabled]="!filtroNomeDoPaciente"
                             (click)="limpar(datatable)"
                             bTooltip="Limpar campo de pesquisa."
@@ -43,7 +42,7 @@
                             pButton
                             type="button"
                             label="Cadastrar"
-                            icon="p-icon-add"
+                            icon="pi pi-plus"
                             routerLink="/pacientes/cadastro"
                             bTooltip="Cadastrar novo paciente."
                         ></button>
@@ -57,8 +56,7 @@
                     [disableEdit]="true"
                     [disableDelete]="true"
                     (buttonClick)="onButtonClick($event)"
-                    #datatable
-                >
+                    #datatable>
                     <p-column header="Identificador" field="id"></p-column>
                     <p-column header="Nome" field="nome" [sortable]="true"></p-column>
                     <p-column header="Data de Nascimento" field="dataDeNascimento">
@@ -67,7 +65,7 @@
                         </ng-template>
                     </p-column>
                     <basis-datatable-button
-                        icon="add"
+                        icon="pi pi-plus"
                         name="create"
                         [disabled]="datatable.selectedRow ? false : true"
                         class="p-button-info"
