--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -160,14 +160,14 @@
                             </div>
                             <div class="p-col-12 p-grid">
                                 <div class="p-md-6 p-sm-12">
-                                    <label>Características</label>
                                     <span class="p-float-label">
                                         <p-multiSelect
-                                            defaultLabel="Características"
-                                            [options]="caracteristicas"
-                                            optionLabel="nome"
-                                            formControlName="caracteristica"
+                                        defaultLabel="Características"
+                                        [options]="caracteristicas"
+                                        optionLabel="nome"
+                                        formControlName="caracteristica"
                                         ></p-multiSelect>
+                                        <label>Características</label>
                                     </span>
                                 </div>
                             </div>
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                             <div class="p-col-12 p-grid">
-                                <div class="p-col-12  p-grid">
+                                <div class="p-md-12">
                                     <span class="p-float-label">
                                         <textarea
                                             pInputTextarea
