--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/cirurgias-leito/cirurgias-leito.component.html
@@ -1,12 +1,10 @@
 <form [formGroup]="itemPrescricaoProcedimento">
-    <div class="p-col-12 p-grid" >
-        <div class="p-md-6">
-            <span class="md-inputfield p-float-label">
-                <p-dropdown placeholder="Selecione..." [filter]="true" InputText [options]="listaCirurgiasLeito" formControlName="tipoProcedimentoId" required
-                    #cirurgias>
-                </p-dropdown>
-                <label>Cirugias Leito</label>
-            </span>
-        </div>
+    <div class="p-md-6">
+        <span class="md-inputfield p-float-label">
+            <p-dropdown [filter]="true" InputText [options]="listaCirurgiasLeito" formControlName="tipoProcedimentoId" required
+                #cirurgias>
+            </p-dropdown>
+            <label>Cirugias Leito</label>
+        </span>
     </div>
 </form>
