--- a/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
+++ b/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
@@ -1,33 +1,25 @@
-<div class="p-grid p-fluid">
-    <div class="p-col-12 p-grid">
-        <div class="card card-w-title">
-            <h1>Consultar Estoque</h1>
+<div class="card card-w-title">
+    <h1>Consultar Estoque</h1>
+    <div class="p-grid p-fluid">
+        <div class="p-col-12 p-grid">
             <div class="p-grid">
-                <form [formGroup]="consultaForm">
+                <form [formGroup]="consultaForm" class="p-md-12">
                     <div class="p-col-12 p-grid">
                         <div class="p-md-3">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="almoxarifados"
+                                <p-autoComplete [suggestions]="almoxarifados"
                                     (completeMethod)="obterAlmoxarifadoPorDescricao($event.query)"
-                                    [forceSelection]="true"
-                                    [dropdown]="true"
-                                    formControlName="almoxarifado"
-                                    field="descricao"
-                                ></p-autoComplete>
+                                    [forceSelection]="true" [dropdown]="true" formControlName="almoxarifado"
+                                    field="descricao"></p-autoComplete>
                                 <label>Almoxarifado</label>
                             </span>
                         </div>
                         <div class="p-md-3">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="fornecedores"
+                                <p-autoComplete [suggestions]="fornecedores"
                                     (completeMethod)="getFornecedoresPorNomeFantasia($event.query)"
-                                    [forceSelection]="true"
-                                    [dropdown]="true"
-                                    formControlName="fornecedor"
-                                    field="nomeFantasia"
-                                ></p-autoComplete>
+                                    [forceSelection]="true" [dropdown]="true" formControlName="fornecedor"
+                                    field="nomeFantasia"></p-autoComplete>
                                 <label>Fornecedor</label>
                             </span>
                         </div>
@@ -35,14 +27,9 @@
                     <div class="p-col-12 p-grid">
                         <div class="p-md-2">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="materiais"
-                                    (completeMethod)="obterMateriaisPorNome($event.query)"
-                                    [forceSelection]="true"
-                                    [dropdown]="true"
-                                    formControlName="material"
-                                    field="nome"
-                                ></p-autoComplete>
+                                <p-autoComplete [suggestions]="materiais"
+                                    (completeMethod)="obterMateriaisPorNome($event.query)" [forceSelection]="true"
+                                    [dropdown]="true" formControlName="material" field="nome"></p-autoComplete>
                                 <label>Material</label>
                             </span>
                         </div>
@@ -55,116 +42,67 @@
                         <div class="p-md-1">
                             <label>Estocável</label>
                             <div class="p-col-12 p-grid">
-                                <p-radioButton
-                                    name="estocavel"
-                                    [value]="true"
-                                    label="Sim"
-                                    formControlName="estocavel"
-                                ></p-radioButton>
+                                <p-radioButton name="estocavel" [value]="true" label="Sim" formControlName="estocavel">
+                                </p-radioButton>
                             </div>
                             <div class="p-col-12 p-grid">
-                                <p-radioButton
-                                    name="estocavel"
-                                    [value]="false"
-                                    formControlName="estocavel"
-                                    label="Não"
-                                ></p-radioButton>
+                                <p-radioButton name="estocavel" [value]="false" formControlName="estocavel" label="Não">
+                                </p-radioButton>
                             </div>
                         </div>
                         <div class="p-md-1">
                             <label>Ativo</label>
                             <div class="p-col-12 p-grid">
-                                <p-radioButton
-                                    name="ativo"
-                                    [value]="true"
-                                    label="Sim"
-                                    formControlName="ativo"
-                                ></p-radioButton>
+                                <p-radioButton name="ativo" [value]="true" label="Sim" formControlName="ativo">
+                                </p-radioButton>
                             </div>
                             <div class="p-col-12 p-grid">
-                                <p-radioButton
-                                    name="ativo"
-                                    [value]="false"
-                                    label="Não"
-                                    formControlName="ativo"
-                                ></p-radioButton>
+                                <p-radioButton name="ativo" [value]="false" label="Não" formControlName="ativo">
+                                </p-radioButton>
                             </div>
                         </div>
                     </div>
                     <div class="p-col-12 p-grid">
                         <div class="p-md-2">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="unidadesMedida"
+                                <p-autoComplete [suggestions]="unidadesMedida"
                                     (completeMethod)="obterUnidadeMedidaPorDescricao($event.query)"
-                                    [forceSelection]="true"
-                                    [dropdown]="true"
-                                    formControlName="unidade"
-                                    [disabled]="consultaForm.value.material"
-                                    field="descricao"
-                                ></p-autoComplete>
+                                    [forceSelection]="true" [dropdown]="true" formControlName="unidade"
+                                    [disabled]="consultaForm.value.material" field="descricao"></p-autoComplete>
                                 <label>Unidade</label>
                             </span>
                         </div>
                         <div class="p-md-2">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="grupos"
-                                    (completeMethod)="obterGruposPorDescricao($event.query)"
-                                    [forceSelection]="true"
-                                    [dropdown]="true"
-                                    formControlName="grupo"
-                                    [disabled]="consultaForm.value.material"
-                                    field="descricao"
-                                ></p-autoComplete>
+                                <p-autoComplete [suggestions]="grupos"
+                                    (completeMethod)="obterGruposPorDescricao($event.query)" [forceSelection]="true"
+                                    [dropdown]="true" formControlName="grupo" [disabled]="consultaForm.value.material"
+                                    field="descricao"></p-autoComplete>
                                 <label>Grupo</label>
                             </span>
                         </div>
                         <div class="p-md-2">
                             <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                                <p-autoComplete
-                                    [suggestions]="classificacoes"
-                                    (completeMethod)="getClassificacoesPorDescricao($event.query)"
-                                    [dropdown]="true"
-                                    formControlName="classificacao"
-                                    [disabled]="consultaForm.value.material"
-                                    field="descricao"
-                                ></p-autoComplete>
+                                <p-autoComplete [suggestions]="classificacoes"
+                                    (completeMethod)="getClassificacoesPorDescricao($event.query)" [dropdown]="true"
+                                    formControlName="classificacao" [disabled]="consultaForm.value.material"
+                                    field="descricao"></p-autoComplete>
                                 <label>Classificação Material</label>
                             </span>
                         </div>
                     </div>
                 </form>
-                <div class="p-col-12 p-grid">
-                    <div class="p-md-2"></div>
+                <div class="p-col-12 p-grid p-jc-center">
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Pesquisar"
-                            icon="p-icon-search"
-                            (click)="pesquisar()"
-                        ></button>
+                        <button pButton type="button" label="Pesquisar" icon="pi pi-search"
+                            (click)="pesquisar()"></button>
                     </div>
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Limpar"
-                            icon="p-icon-minus"
-                            (click)="limpar()"
-                        ></button>
+                        <button pButton type="button" label="Limpar" icon="pi pi-minus" (click)="limpar()"></button>
                     </div>
                 </div>
-                <div class="p-col-12 p-grid p-md-3"></div>
-                <basis-datatable
-                    type="server"
-                    [url]="api"
-                    [disableDelete]="true"
-                    [disableEdit]="true"
-                    [disableView]="true"
-                    #datatable
-                >
+                <basis-datatable [verticalButtons]="false" type="server" [url]="api" [disableDelete]="true" [disableEdit]="true"
+                    [disableView]="true" #datatable>
                     <p-column header="Almox." field="nomeAlmoxarifado"> </p-column>
                     <p-column header="Forn." field="nomeFantasia"> </p-column>
                     <p-column header="Material" field="nomeMaterial"> </p-column>
