--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -199,3 +199,7 @@ p-inputmask {
     padding: 0 !important;
 }
 
+p-fieldset, app-procedimento, app-cid , p-accordion, form {
+    width: 100%;
+}
+
