--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -1,138 +1,140 @@
-<div class="p-grid p-fluid">
-    <div class="p-col-12 p-grid">
+<div class="card">
+    <h1>Medicamentos</h1>
+    <div class="p-grid p-fluid">
         <div class="p-col-12 p-grid">
-            <h1>Medicamentos</h1>
-        </div>
-        <div class="p-col-12 p-grid">
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input
-                        pInputText
-                        type="text"
-                        pTooltip="Informe o Código."
-                        [(ngModel)]="codigo"
-                    />
-                    <label>Medicamento</label>
-                </span>
+            <div class="p-col-12 p-grid">
             </div>
-            <div class="p-md-2 p-sm-12">
-                <span class="p-float-label">
-                    <input
-                        pInputText
-                        type="text"
-                        pTooltip="Informe a Descrição."
-                        [(ngModel)]="descricao"
-                    />
-                    <label>Descrição</label>
-                </span>
+            <div class="p-col-12 p-grid">
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input
+                            pInputText
+                            type="text"
+                            pTooltip="Informe o Código."
+                            [(ngModel)]="codigo"
+                        />
+                        <label>Medicamento</label>
+                    </span>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <span class="p-float-label">
+                        <input
+                            pInputText
+                            type="text"
+                            pTooltip="Informe a Descrição."
+                            [(ngModel)]="descricao"
+                        />
+                        <label>Descrição</label>
+                    </span>
+                </div>
+    
+                <div class="p-md-2 p-sm-12">
+                    <p-dropdown
+                        pTooltip="Informe a Situação."
+                        [options]="results"
+                        [(ngModel)]="situacao"
+                    ></p-dropdown>
+                </div>
             </div>
-
-            <div class="p-md-2 p-sm-12">
-                <p-dropdown
-                    pTooltip="Informe a Situação."
-                    [options]="results"
-                    [(ngModel)]="situacao"
-                ></p-dropdown>
+            <div class="p-col-12 p-grid">
+                <div class="p-md-2 p-sm-12">
+                    <button
+                        pButton
+                        type="button"
+                        label="Pesquisar"
+                        icon="pi pi-search"
+                        (click)="listar()"
+                    ></button>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <button 
+                        pButton 
+                        type="button" 
+                        routerLink="/cadastrar-medicamento"
+                        label="Cadastrar">
+                    </button>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <button 
+                        pButton type="button" 
+                        label="Limpar"
+                        (click)="limparPesquisa()">
+                    </button>
+                </div>
+                <div class="p-md-2 p-sm-12">
+                    <button pButton type="button" label="Exportar"></button>
+                </div>
             </div>
-        </div>
-        <div class="p-col-12 p-grid">
-            <div class="p-md-2 p-sm-12">
-                <button
-                    pButton
-                    type="button"
-                    label="Pesquisar"
-                    icon="p-icon-search"
-                    (click)="listar()"
-                ></button>
-            </div>
-            <div class="p-md-2 p-sm-12">
-                <button 
-                    pButton 
-                    type="button" 
-                    routerLink="/cadastrar-medicamento"
-                    label="Cadastrar">
-                </button>
-            </div>
-            <div class="p-md-2 p-sm-12">
-                <button 
-                    pButton type="button" 
-                    label="Limpar"
-                    (click)="limparPesquisa()">
-                </button>
-            </div>
-            <div class="p-md-2 p-sm-12">
-                <button pButton type="button" label="Exportar"></button>
-            </div>
-        </div>
-        <basis-datatable type="memory" 
-                [value]="medicamento" 
-                sortField="brand"
-                [disableView]="true"
-                [disableEdit]="true"
-                [disableDelete]="true"
-                (buttonClick)="btnClick($event)"
-                #datatable>
-        
-            <p-column header="Descrição" field="descricao" [sortable]="true"></p-column>
-            <p-column header="Concentração" field="concentracao"></p-column>
-            <p-column header="Unidade" field="unidade">
-                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                    <span>
-                        {{
-                            rowData[col.field] === null || rowData[col.field] === undefined
-                                ? undefined
-                                : rowData[col.field].nome
-                        }}</span
-                    >
-                </ng-template>
-            </p-column>        
-            <p-column header="Apresentação" field="apresentacao">
-                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                    <span>
-                        {{
-                            rowData[col.field] === null || rowData[col.field] === undefined
-                                ? undefined
-                                : rowData[col.field].nome
-                        }}</span
-                    >
-                </ng-template>
-            </p-column>
-            <p-column header="Situação" field="ativo">
-                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                    <span> {{ rowData[col.field] === true ? 'Ativo' : 'Inativo' }} </span>
-                </ng-template>
-            </p-column>
-
-            <basis-datatable-button 
-                name="edit"
-                icon="edit" 
-                [disabled]="datatable.selectedRow == null"
-                class="p-button-success">
-            </basis-datatable-button>
-
-            <basis-datatable-button
-                ng-reflect-icon="p-icon-remove-red-eye"
-                ng-reflect-b-tooltip="Escolha um registro para visualizar"
-                class="ng-star-inserted"
-                [disabled]="datatable.selectedRow == null"
-                name="view"
-                icon="remove-red-eye">
-            </basis-datatable-button>
+            <basis-datatable type="memory" 
+                    [value]="medicamento" 
+                    sortField="brand"
+                    [disableView]="true"
+                    [disableEdit]="true"
+                    [disableDelete]="true"
+                    (buttonClick)="btnClick($event)"
+                    #datatable>
             
-            <basis-datatable-button
-                class="p-button-danger"
-                [disabled]="datatable.selectedRow == null"
-                (buttonClick)="btnClick($event)"
-                name="delete"
-                icon="delete">
-            </basis-datatable-button>        
-        </basis-datatable>
-        
-        <p-confirmDialog #dialog header="Confirmação" icon="pi pi-exclamation-triangle">
-            <p-footer>
-                <button type="button" pButton icon="pi pi-times" label="Não" (click)="dialog.reject()"></button>
-                <button type="button" pButton icon="pi pi-check" label="Sim" (click)="dialog.accept()"></button>
-            </p-footer>
-        </p-confirmDialog>
+                <p-column header="Descrição" field="descricao" [sortable]="true"></p-column>
+                <p-column header="Concentração" field="concentracao"></p-column>
+                <p-column header="Unidade" field="unidade">
+                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                        <span>
+                            {{
+                                rowData[col.field] === null || rowData[col.field] === undefined
+                                    ? undefined
+                                    : rowData[col.field].nome
+                            }}</span
+                        >
+                    </ng-template>
+                </p-column>        
+                <p-column header="Apresentação" field="apresentacao">
+                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                        <span>
+                            {{
+                                rowData[col.field] === null || rowData[col.field] === undefined
+                                    ? undefined
+                                    : rowData[col.field].nome
+                            }}</span
+                        >
+                    </ng-template>
+                </p-column>
+                <p-column header="Situação" field="ativo">
+                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                        <span> {{ rowData[col.field] === true ? 'Ativo' : 'Inativo' }} </span>
+                    </ng-template>
+                </p-column>
+    
+                <basis-datatable-button 
+                    name="edit"
+                    icon="pi pi-pencil" 
+                    [disabled]="datatable.selectedRow == null"
+                    class="p-button-success">
+                </basis-datatable-button>
+    
+                <basis-datatable-button
+                    ng-reflect-icon="pi pi-remove-red-eye"
+                    ng-reflect-b-tooltip="Escolha um registro para visualizar"
+                    class="ng-star-inserted"
+                    [disabled]="datatable.selectedRow == null"
+                    name="view"
+                    icon="pi pi-eye">
+                </basis-datatable-button>
+                
+                <basis-datatable-button
+                    class="p-button-danger"
+                    [disabled]="datatable.selectedRow == null"
+                    (buttonClick)="btnClick($event)"
+                    name="delete"
+                    icon="pi pi-trash">
+                </basis-datatable-button>        
+            </basis-datatable>
+            
+            <p-confirmDialog #dialog header="Confirmação" icon="pi pi-exclamation-triangle">
+                <p-footer>
+                    <button type="button" pButton icon="pi pi-times" label="Não" (click)="dialog.reject()"></button>
+                    <button type="button" pButton icon="pi pi-check" label="Sim" (click)="dialog.accept()"></button>
+                </p-footer>
+            </p-confirmDialog>
+        </div>
     </div>
 </div>
