--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
@@ -1,22 +1,18 @@
 <form [formGroup]="itemPrescricaoProcedimento">
-    <div class="p-col-12 p-grid">
-        <div class="p-md-6">
-            <span class="md-inputfield p-float-label">
-                <p-dropdown placeholder="Selecione..." [filter]="true" InputText [options]="listaOrtesesProteses" formControlName="tipoProcedimentoId"
-                    #orteseProtese>
-                </p-dropdown>
-                <label>Órteses/Próteses</label>
-            </span>
-        </div>
+    <div class="p-md-6">
+        <span class="md-inputfield p-float-label">
+            <p-dropdown [filter]="true" InputText [options]="listaOrtesesProteses" formControlName="tipoProcedimentoId"
+                #orteseProtese>
+            </p-dropdown>
+            <label>Órteses/Próteses</label>
+        </span>
     </div>
 
-    <div class="p-col-12 p-grid">
-        <div class="p-md-6">
-            <span class="md-inputfield p-float-label">
-                <input type="number" pInputText formControlName="quantidadeOrteseProtese" />
-                <label>Quantidade</label>
-            </span>
-        </div>
+    <div class="p-md-6">
+        <span class="md-inputfield p-float-label">
+            <input type="number" pInputText formControlName="quantidadeOrteseProtese" />
+            <label>Quantidade</label>
+        </span>
     </div>
 </form>
 
