--- a/frontend/src/app/suprimentos/components/documento-fiscal-entrada/documento-fiscal-entrada.component.html
+++ b/frontend/src/app/suprimentos/components/documento-fiscal-entrada/documento-fiscal-entrada.component.html
@@ -1,15 +1,11 @@
-<div class="p-grid p-fluid">
-    <div class="p-col-12 p-grid">
-        <form [formGroup]="parentFormGroup">
+<form [formGroup]="parentFormGroup">
+    <div class="p-grid p-fluid">
+        <div class="p-col-12 p-grid">
             <div class="p-md-1">
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                    <p-autoComplete
-                        [suggestions]="documentos"
-                        (completeMethod)="obterDocumentoPeloNumero($event)"
-                        [dropdown]="true"
-                        (onSelect)="aoSelecionarUmNumero($event)"
-                        field="numeroDocumento"
-                    ></p-autoComplete>
+                    <p-autoComplete [suggestions]="documentos" (completeMethod)="obterDocumentoPeloNumero($event)"
+                        [dropdown]="true" (onSelect)="aoSelecionarUmNumero($event)" field="numeroDocumento">
+                    </p-autoComplete>
                     <label>Número</label>
                 </span>
             </div>
@@ -25,7 +21,7 @@
                     <label>Tipo de Nota Fiscal</label>
                 </span>
             </div>
-            <div class="p-md-1">
+            <div class="p-md-2">
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="dataEmissao" />
                     <label>Data de Emissão</label>
@@ -50,11 +46,11 @@
                 </span>
             </div>
             <div class="p-md-1">
-                <button pButton label="Nota Fiscal" icon="p-icon-add"></button>
+                <button pButton label="Nota Fiscal" icon="pi pi-add"></button>
             </div>
             <div class="p-md-1">
-                <button pButton label="Limpar" icon="p-icon-minus" (click)="limpar()"></button>
+                <button pButton label="Limpar" icon="pi pi-minus" (click)="limpar()"></button>
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
