--- a/frontend/src/app/suprimentos/components/requisicao-material/requisicao-material.component.html
+++ b/frontend/src/app/suprimentos/components/requisicao-material/requisicao-material.component.html
@@ -1,7 +1,7 @@
-<div class="p-grid p-fluid">
-    <div class="p-col-12 p-grid">
-        <div class="card card-w-title">
-            <h1>Requisições de Materiais</h1>
+<div class="card card-w-title">
+    <h1>Requisições de Materiais</h1>
+    <div class="p-grid p-fluid">
+        <div class="p-col-12 p-grid">
             <div class="p-grid">
                 <div class="p-md-12 p-fluid">
                     <span class="md-inputfield p-float-label" style="margin-top: 5px;">
@@ -9,57 +9,39 @@
                         <label>Requisição</label>
                     </span>
                 </div>
-                <div class="p-col-12 p-grid">
-                    <div class="p-md-2"></div>
+                <div class="p-col-12 p-grid p-jc-center">
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Pesquisar"
-                            icon="p-icon-search"
-                        ></button>
+                        <button pButton type="button" label="Pesquisar" icon="pi pi-search"></button>
                     </div>
                     <div class="p-md-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Nova Requisição"
-                            [routerLink]="['/requisicoes-materiais/nova']"
-                            icon="p-icon-add"
-                        ></button>
+                        <button pButton type="button" label="Nova Requisição"
+                            [routerLink]="['/requisicoes-materiais/nova']" icon="pi pi-add"></button>
                     </div>
                 </div>
-                <div class="p-col-12 p-grid p-md-3"></div>
-                <basis-datatable
-                    type="server"
-                    [url]="url"
-                    [disableDelete]="false"
-                    [disableEdit]="true"
-                    [disableView]="true"
-                    #datatable
-                >
+                <basis-datatable type="server" [url]="url" [disableDelete]="false" [disableEdit]="true"
+                    [disableView]="true" #datatable>
                     <p-column header="Gerado Em" field="">
                         <ng-template let-data="rowData" pTemplate="body">
                             {{ data?.geradoEm | date: 'dd/MM/yyyy - HH:mm' }}
                         </ng-template>
                     </p-column>
-                    <p-column header="CA Requisição" field=""
-                        ><ng-template let-data="rowData" pTemplate="body">
+                    <p-column header="CA Requisição" field="">
+                        <ng-template let-data="rowData" pTemplate="body">
                             {{ data?.caAplicacao?.descricao }}
                         </ng-template>
                     </p-column>
-                    <p-column header="CA Requisição" field=""
-                        ><ng-template let-data="rowData" pTemplate="body">
+                    <p-column header="CA Requisição" field="">
+                        <ng-template let-data="rowData" pTemplate="body">
                             {{ data?.caRequisitante?.descricao }}
                         </ng-template>
                     </p-column>
-                    <p-column header="Situação" field=""
-                        ><ng-template let-data="rowData" pTemplate="body">
+                    <p-column header="Situação" field="">
+                        <ng-template let-data="rowData" pTemplate="body">
                             {{ data?.situacao?.descricao }}
                         </ng-template>
                     </p-column>
-                    <p-column header="Gerado Por" field=""
-                        ><ng-template let-data="rowData" pTemplate="body">
+                    <p-column header="Gerado Por" field="">
+                        <ng-template let-data="rowData" pTemplate="body">
                             {{ data?.geradoPor }}
                         </ng-template>
                     </p-column>
